# SkyPro_Widget

./: pyproject.toml
data/: test_invalid.json  test_valid.json
src/: decorators.py  generators.py  logger.py  masks.py  pandas_utils.py  proccessing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_pandas_utils.py  test_proccessing.py  test_utils.py  test_widget.py
